<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBrown"
    tools:context=".activities.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/back"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/back"
                        android:textColor="@color/white" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/favBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/btn_3"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/picMain"
                    android:layout_width="wrap_content"
                    android:layout_height="430dp"
                    android:padding="16dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toStartOf="@+id/favBtn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher_background" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Title"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coffee_size"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/brown_2_full_corner_bg"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/SmallBtn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.333"
                    android:gravity="center"
                    android:text="@string/small"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/MediumBtn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.333"
                    android:gravity="center"
                    android:text="@string/medium"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/LargeBtn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.333"
                    android:gravity="center"
                    android:text="@string/large"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/qty"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="90dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/stroke_bg">

                    <TextView
                        android:id="@+id/numberInCartTxt"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginBottom="3dp"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/plusBtn"
                        app:layout_constraintStart_toEndOf="@+id/minusBtn"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/minusBtn"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginBottom="3dp"
                        android:gravity="center"
                        android:text="-"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/plusBtn"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginBottom="3dp"
                        android:gravity="center"
                        android:text="+"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/ratingTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="8dp"/>

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    app:tint= "@color/brown"
                    app:srcCompat="@drawable/star" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"/>

            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="text"
                android:textColor="@color/white"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/addToCartBtn"
                    android:layout_width="190dp"
                    android:layout_height="50dp"
                    android:background="@drawable/brown_full_corner_bg"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/add_to_cart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/priceTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$0"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>